--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ configurations {
     runtimeClasspath {
         extendsFrom developmentOnly
     }
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 // 라이브러리들을 다운로드할 저장소
@@ -43,6 +46,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatisVersion"
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation "org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16"
 
     // 어노테이션 기반 라이브러리를 컴파일러가 인식하도록 함
     //   - ex.) lombok, queryDSL
