--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
       maximum-pool-size: 20
       pool-name: franc-pool
 
-mybatis:
-  mapper-locations: classpath:/mapper/**/*.xml
-  config-location: classpath:mybatis-config.xml
+logging:
+  config: classpath:log4j2.xml
+
+#mybatis:
+  #mapper-locations: classpath:/mapper/**/*.xml
+  #config-location: classpath:mybatis-config.xml
