--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,18 @@ spring:
 logging:
   config: classpath:log4j2.xml
 
-#mybatis:
-  #mapper-locations: classpath:/mapper/**/*.xml
-  #config-location: classpath:mybatis-config.xml
+# Swagger springdoc-ui Configuration
+springdoc:
+  packages-to-scan: com.franc
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: franc-ui.html   # Swagger UI 경로 => localhost:8000/franc-ui.html
+    tags-sorter: alpha            # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+    operations-sorter: alpha      # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+  api-docs:
+    path: /api-docs/json
+    groups:
+      enabled: true
+  cache:
+    disabled: true
